--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 create-prescription-poc/package-lock.json
 create-prescription-poc-express/package-lock.json
 /create-prescription-poc/node_modules/
+.idea
